[DOC] Swagger Docs for API Method Get Asset Placement and History Module
and fixes on audit trail
