# routes/routes.go
@@ -75,11 +75,11 @@ func SetUpRoutes(r *gin.Engine, db *gorm.DB, redisClient *redis.Client) {
 	protected := api.Group("/")
 	protected.Use(middleware.AuthMiddleware(redisClient, "admin", "technician", "guest"))
 	{
-		protected.GET("/profile", userController.GetMyProfile, middleware.AuditTrailMiddleware(db, "get_my_profile"))
+		protected.GET("/profile", userController.GetMyProfile)
 
 		room := protected.Group("/room")
 		{
-			room.GET("/", roomController.GetAllRoom, middleware.AuditTrailMiddleware(db, "get_all_room"))
+			room.GET("/", roomController.GetAllRoom)
 		}
 		history := protected.Group("/history")
 		{
@@ -93,7 +93,7 @@ func SetUpRoutes(r *gin.Engine, db *gorm.DB, redisClient *redis.Client) {
 	{
 		room := protected_admin.Group("/room")
 		{
-			room.GET("/most_context/:target_col", roomController.GetMostContext, middleware.AuditTrailMiddleware(db, "get_most_context_room"))
+			room.GET("/most_context/:target_col", roomController.GetMostContext)
 			room.POST("/", roomController.Create, middleware.AuditTrailMiddleware(db, "create_room"))
 			room.DELETE("/:id", roomController.DeleteById, middleware.AuditTrailMiddleware(db, "delete_room_by_id"))
 			room.PUT("/:id", roomController.UpdateById, middleware.AuditTrailMiddleware(db, "update_room_by_id"))
@@ -112,8 +112,8 @@ func SetUpRoutes(r *gin.Engine, db *gorm.DB, redisClient *redis.Client) {
 		asset := protected_admin.Group("/asset")
 		{
 			asset.POST("/", assetController.Create, middleware.AuditTrailMiddleware(db, "create_asset"))
-			asset.GET("/most_context/:target_col", assetController.GetMostContext, middleware.AuditTrailMiddleware(db, "get_most_context_asset"))
-			asset.GET("/", assetController.GetAllAsset, middleware.AuditTrailMiddleware(db, "get_all_asset"))
+			asset.GET("/most_context/:target_col", assetController.GetMostContext)
+			asset.GET("/", assetController.GetAllAsset)
 			asset.DELETE("/destroy/:id", assetController.HardDeleteById, middleware.AuditTrailMiddleware(db, "hard_delete_asset_by_id"))
 			asset.DELETE("/:id", assetController.SoftDeleteById, middleware.AuditTrailMiddleware(db, "soft_delete_asset_by_id"))
 			asset.PUT("/:id", assetController.UpdateById, middleware.AuditTrailMiddleware(db, "update_asset_by_id"))
@@ -126,7 +126,7 @@ func SetUpRoutes(r *gin.Engine, db *gorm.DB, redisClient *redis.Client) {
 			}
 			asset_maintenance := asset.Group("/maintenance")
 			{
-				asset_maintenance.GET("/most_context/:target_col", assetMaintenanceController.GetMostContext, middleware.AuditTrailMiddleware(db, "get_most_context_asset_maintenance"))
+				asset_maintenance.GET("/most_context/:target_col", assetMaintenanceController.GetMostContext)
 				asset_maintenance.POST("/", assetMaintenanceController.Create, middleware.AuditTrailMiddleware(db, "create_asset_maintenance_by_id"))
 				asset_maintenance.PUT("/:id", assetMaintenanceController.UpdateById, middleware.AuditTrailMiddleware(db, "update_asset_maintenance_by_id"))
 				asset_maintenance.DELETE("/:id", assetMaintenanceController.DeleteById, middleware.AuditTrailMiddleware(db, "delete_asset_maintenance_by_id"))
@@ -134,8 +134,8 @@ func SetUpRoutes(r *gin.Engine, db *gorm.DB, redisClient *redis.Client) {
 			asset_finding := asset.Group("/finding")
 			{
 				asset_finding.DELETE("/:id", assetFindingController.DeleteById, middleware.AuditTrailMiddleware(db, "delete_asset_finding_by_id"))
-				asset_finding.GET("/most_context/:target_col", assetFindingController.GetMostContext, middleware.AuditTrailMiddleware(db, "get_most_context_asset_finding"))
-				asset_finding.GET("/hour_total", assetFindingController.GetFindingHourTotal, middleware.AuditTrailMiddleware(db, "get_asset_finding_hour_total"))
+				asset_finding.GET("/most_context/:target_col", assetFindingController.GetMostContext)
+				asset_finding.GET("/hour_total", assetFindingController.GetFindingHourTotal)
 			}
 		}
 	}
@@ -146,31 +146,31 @@ func SetUpRoutes(r *gin.Engine, db *gorm.DB, redisClient *redis.Client) {
 	{
 		technician := protected_admin_technician.Group("/technician")
 		{
-			technician.GET("/", technicianController.GetAllTechnician, middleware.AuditTrailMiddleware(db, "get_all_technician"))
+			technician.GET("/", technicianController.GetAllTechnician)
 		}
 		asset := protected_admin_technician.Group("/asset")
 		{
-			asset.GET("/deleted", assetController.GetDeletedAsset, middleware.AuditTrailMiddleware(db, "get_deleted_asset"))
+			asset.GET("/deleted", assetController.GetDeletedAsset)
 
 			asset_placement := asset.Group("/placement")
 			{
-				asset_placement.GET("/", assetPlacementController.GetAllAssetPlacement, middleware.AuditTrailMiddleware(db, "get_all_asset_placement"))
+				asset_placement.GET("/", assetPlacementController.GetAllAssetPlacement)
 				asset_placement.PUT("/:id", assetPlacementController.UpdateById, middleware.AuditTrailMiddleware(db, "update_asset_placement_by_id"))
 			}
 			asset_maintenance := asset.Group("/maintenance")
 			{
-				asset_maintenance.GET("/", assetMaintenanceController.GetAllAssetMaintenance, middleware.AuditTrailMiddleware(db, "get_all_asset_maintenance"))
-				asset_maintenance.GET("/schedule", assetMaintenanceController.GetAllAssetMaintenanceSchedule, middleware.AuditTrailMiddleware(db, "get_all_asset_maintenance_schedule"))
+				asset_maintenance.GET("/", assetMaintenanceController.GetAllAssetMaintenance)
+				asset_maintenance.GET("/schedule", assetMaintenanceController.GetAllAssetMaintenanceSchedule)
 			}
 			asset_finding := asset.Group("/finding")
 			{
-				asset_finding.GET("/", assetFindingController.GetAllAssetFinding, middleware.AuditTrailMiddleware(db, "get_all_asset_finding"))
+				asset_finding.GET("/", assetFindingController.GetAllAssetFinding)
 			}
 		}
 		room := protected_admin_technician.Group("/room/asset")
 		{
-			room.GET("/detail/:floor/:room_name", roomController.GetRoomAssetByFloorAndRoomName, middleware.AuditTrailMiddleware(db, "get_room_asset_by_floor_and_room_name"))
-			room.GET("/short/:floor/:room_name", roomController.GetRoomAssetShortByFloorAndRoomName, middleware.AuditTrailMiddleware(db, "get_room_asset_short_by_floor_and_room_name"))
+			room.GET("/detail/:floor/:room_name", roomController.GetRoomAssetByFloorAndRoomName)
+			room.GET("/short/:floor/:room_name", roomController.GetRoomAssetShortByFloorAndRoomName)
 		}
 	}
 
